name:           servant-auth-snap
version:        0.4.4.0
synopsis:       servant-snap/servant-auth compatibility
description:    This package provides the required instances for using the @Auth@ combinator
                in your 'servant' server.
                .
                Both cookie- and token- (REST API) based authentication is provided.
                .
                For a quick overview of the usage, see the <http://github.com/haskell-servant/servant-auth#readme README>.
category:       Web, Servant, Authentication
homepage:       http://github.com/haskell-servant/servant-auth#readme
bug-reports:    https://github.com/haskell-servant/servant-auth/issues
author:         Julian K. Arni
maintainer:     jkarni@gmail.com
copyright:      (c) Julian K. Arni
license:        BSD3
license-file:   LICENSE
tested-with:    GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.2
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/haskell-servant/servant-auth

library
  hs-source-dirs:
      src
  default-extensions: AutoDeriveTypeable ConstraintKinds DataKinds DefaultSignatures DeriveFoldable DeriveFunctor DeriveGeneric DeriveTraversable FlexibleContexts FlexibleInstances FunctionalDependencies GADTs KindSignatures MultiParamTypeClasses OverloadedStrings RankNTypes ScopedTypeVariables TypeFamilies TypeOperators
  ghc-options: -Wall
  build-depends:
      base                    >= 4.9      && < 4.13
    , aeson                   >= 1.3.1.1  && < 1.5
    , base64-bytestring       >= 1.0.0.1  && < 1.1
    , blaze-builder           >= 0.4.1.0  && < 0.5
    , bytestring              >= 0.10.6.0 && < 0.11
    , case-insensitive        >= 1.2.0.11 && < 1.3
    , cookie                  >= 0.4.4    && < 0.5
    , data-default-class      >= 0.1.2.0  && < 0.2
    , entropy                 >= 0.4.1.3  && < 0.5
    , http-types              >= 0.12.2   && < 0.13
    , jose                    >= 0.7.0.0  && < 0.9
    , lens                    >= 4.16.1   && < 4.18
    , memory                  >= 0.14.16  && < 0.15
    , monad-time              >= 0.3.1.0  && < 0.4
    , mtl                     >= 2.2.2    && < 2.3
    , snap-core
    , servant                 >= 0.13     && < 0.17
    , servant-auth            == 0.3.*
    , servant-snap
    , tagged                  >= 0.8.4    && < 0.9
    , text                    >= 1.2.3.0  && < 1.3
    , time                    >= 1.5.0.1  && < 1.9
    , unordered-containers    >= 0.2.9.0  && < 0.3
  if !impl(ghc >= 8.0)
    build-depends:
      semigroups >= 0.18.5 && <0.19
  exposed-modules:
      Servant.Auth.Server
      Servant.Auth.Server.Internal
      Servant.Auth.Server.Internal.AddSetCookie
      Servant.Auth.Server.Internal.BasicAuth
      Servant.Auth.Server.Internal.Class
      Servant.Auth.Server.Internal.ConfigTypes
      Servant.Auth.Server.Internal.Cookie
      Servant.Auth.Server.Internal.FormLogin
      Servant.Auth.Server.Internal.JWT
      Servant.Auth.Server.Internal.ThrowAll
      Servant.Auth.Server.Internal.Types
      Servant.Auth.Server.SetCookieOrphan
  default-language: Haskell2010